# deps-lsp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  crates.js  deny.toml  help.html  index.html  settings.html  src-files.js
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-merge.yml  ci.yml  docs.yml  label.yml  release.yml  stale.yml
benchmarks/: parsing.rs
crates/deps-bundler/: Cargo.toml  README.md
crates/deps-bundler/benches/: bundler_benchmarks.rs
crates/deps-bundler/src/: ecosystem.rs  error.rs  formatter.rs  lib.rs  lockfile.rs  parser.rs  registry.rs  types.rs  version.rs
crates/deps-cargo/: Cargo.toml  README.md
crates/deps-composer/: Cargo.toml  README.md
crates/deps-composer/src/: ecosystem.rs  error.rs  formatter.rs  lib.rs  lockfile.rs  parser.rs  registry.rs  types.rs
crates/deps-core/: Cargo.toml  README.md
crates/deps-dart/: Cargo.toml  README.md
crates/deps-dart/src/: ecosystem.rs  error.rs  formatter.rs  lib.rs  lockfile.rs  parser.rs  registry.rs  types.rs  version.rs
crates/deps-go/: Cargo.toml  README.md
crates/deps-gradle/: Cargo.toml  README.md
crates/deps-gradle/src/: ecosystem.rs  error.rs  formatter.rs  lib.rs  types.rs
crates/deps-gradle/src/parser/: catalog.rs  groovy.rs  kotlin.rs  mod.rs  properties.rs  settings.rs
crates/deps-gradle/tests/: integration_tests.rs
crates/deps-gradle/tests/fixtures/: build.gradle  build.gradle.kts  libs.versions.toml
crates/deps-lsp/: Cargo.toml  README.md  build.rs
crates/deps-lsp/benches/: lsp_handlers.rs
crates/deps-lsp/src/: config.rs  document.rs  document_lifecycle.rs  document_lifecycle_new.rs  file_watcher.rs  lib.rs  main.rs  progress.rs  server.rs  test_utils.rs
crates/deps-lsp/src/cargo/: mod.rs  parser.rs  registry.rs
crates/deps-lsp/src/document/: lifecycle.rs  loader.rs  mod.rs  state.rs
crates/deps-lsp/src/handlers/: cargo_handler_impl.rs  code_actions.rs  code_actions_new.rs  completion.rs  diagnostics.rs  diagnostics_new.rs  hover.rs  hover_new.rs  inlay_hints.rs  inlay_hints_new.rs  mod.rs  npm_handler_impl.rs  pypi_handler_impl.rs
crates/deps-lsp/tests/: document_lifecycle_integration.rs  lsp_integration.rs
crates/deps-lsp/tests/common/: mod.rs
crates/deps-maven/: Cargo.toml  README.md
crates/deps-maven/src/: ecosystem.rs  error.rs  formatter.rs  lib.rs  parser.rs  registry.rs  types.rs  version.rs
crates/deps-maven/tests/: integration_tests.rs
crates/deps-maven/tests/fixtures/: complex_pom.xml  malformed_pom.xml  minimal_pom.xml  namespaced_pom.xml  property_versions.xml  scoped_deps.xml  simple_pom.xml
crates/deps-npm/: Cargo.toml  README.md
crates/deps-pypi/: Cargo.toml  README.md
crates/deps-swift/: Cargo.toml  README.md
crates/deps-swift/src/: ecosystem.rs  error.rs  formatter.rs  lib.rs  lockfile.rs  parser.rs  registry.rs  types.rs
crates/deps-swift/tests/fixtures/: commented.swift  complex.swift  simple.swift
deps_bundler/: all.html  enum.DependencySource.html  index.html
deps_bundler/ecosystem/: index.html  sidebar-items.js  struct.BundlerEcosystem.html
deps_bundler/error/: enum.BundlerError.html  index.html  sidebar-items.js  (+1 more)
deps_cargo/: all.html  enum.DependencySource.html  index.html  sidebar-items.js
deps_composer/: all.html  index.html
deps_core/: all.html  index.html  macro.delegate_to_variants!.html  macro.delegate_to_variants.html  macro.impl_dependency!.html  macro.impl_dependency.html  macro.impl_metadata!.html  macro.impl_metadata.html  macro.impl_parse_result!.html  macro.impl_parse_result.html  macro.impl_version!.html  macro.impl_version.html  sidebar-items.js
deps_dart/: all.html  enum.DependencySource.html  index.html  sidebar-items.js
deps_go/: all.html  index.html
deps_gradle/: all.html  index.html  sidebar-items.js  struct.GradleVersion.html
deps_lsp/: all.html  enum.ComposerSection.html  enum.DependencyGroup.html  enum.DependencySection.html  enum.DependencySource.html  enum.DepsError.html  enum.GoDirective.html  enum.NpmDependencySection.html  enum.PypiDependencySection.html  fn.parse_cargo_toml.html  fn.parse_composer_json.html  fn.parse_gemfile.html  fn.parse_go_mod.html  fn.parse_gradle.html  fn.parse_package_json.html  fn.parse_package_swift.html  fn.parse_pom_xml.html  fn.parse_pubspec_yaml.html  fn.register_ecosystems.html  index.html  sidebar-items.js  struct.ArtifactInfo.html  struct.BundlerDependency.html  struct.BundlerEcosystem.html  struct.BundlerParseResult.html  struct.BundlerVersion.html  struct.CargoEcosystem.html  struct.CargoParser.html  struct.CargoVersion.html  struct.ComposerDependency.html  struct.ComposerEcosystem.html  struct.ComposerPackage.html  struct.ComposerParseResult.html  struct.ComposerVersion.html  struct.CrateInfo.html  struct.CratesIoRegistry.html  struct.DartDependency.html  struct.DartEcosystem.html  struct.DartFormatter.html  struct.DartParseResult.html  (+48 more)
deps_maven/: all.html  index.html  sidebar-items.js
deps_npm/: all.html  index.html  sidebar-items.js  type.NpmVersionReq.html
deps_pypi/: all.html  enum.PypiDependencySource.html  index.html  sidebar-items.js
deps_swift/: all.html  index.html  sidebar-items.js
docs/: ECOSYSTEM_GUIDE.md
scripts/: install-local.sh
search.index/: 000c590613b0.js  001eded158ea.js  00310597fcef.js  00b0edeeea71.js  00d4048f58fe.js  00e6c23f8e.js  010413f3e5f4.js  011529b84112.js  01292cb016d6.js  013b0bb466fd.js  014fc275339a.js  015eeca9991c.js  018e54e21e.js  019d5e6ca5b9.js  01a3aae98d.js  01c58b2662ab.js  01c5b5f154db.js  01e770725248.js  01eef53ed58d.js  01f67ef39f6f.js  01f7880ad65e.js  020765b4d99c.js  024dcb662956.js  0260c5d221c3.js  027bc44ce3f0.js  02870e6673.js  02903d2fc8.js  0347ffe500e1.js  038fc50ea792.js  03ad354a939a.js  03c19e36fb29.js  03c4064b4cfa.js  03fb13cfd612.js  0401ff49ba31.js  044b4ca741.js  0451ee93c32f.js  04718c9794b2.js  0533f0b9ee98.js  054249c4b1d8.js  05540d11e0fc.js  (+948 more)
templates/: README.md
(+738 files in other folders)
