[package]
name = "deps-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation for dependency management"
publish = true

[lints]
workspace = true

[[bin]]
name = "deps-lsp"
path = "src/main.rs"

[lib]
name = "deps_lsp"
path = "src/lib.rs"

[features]
default = ["cargo", "npm", "pypi", "go", "bundler", "dart"]
cargo = ["dep:deps-cargo"]
npm = ["dep:deps-npm"]
pypi = ["dep:deps-pypi"]
go = ["dep:deps-go"]
bundler = ["dep:deps-bundler"]
dart = ["dep:deps-dart"]

[dependencies]
# Internal crates
deps-core = { workspace = true }
deps-cargo = { workspace = true, optional = true }
deps-npm = { workspace = true, optional = true }
deps-pypi = { workspace = true, optional = true }
deps-go = { workspace = true, optional = true }
deps-bundler = { workspace = true, optional = true }
deps-dart = { workspace = true, optional = true }

# External dependencies
dashmap = { workspace = true }
futures = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "io-std"] }
tower-lsp-server = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
async-trait = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true, features = ["json"] }
mockito = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }

[[bench]]
name = "lsp_handlers"
harness = false
