[package]
name = "deps-swift"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Swift Package Manager support for deps-lsp"

[lints]
workspace = true

[dependencies]
deps-core = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
tower-lsp-server = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
tempfile = { workspace = true }
tokio-test = { workspace = true }
